--- a/WorldNomads/Views/Home/EnumerateSequences.cshtml
+++ b/WorldNomads/Views/Home/EnumerateSequences.cshtml
@@ -13,7 +13,7 @@
 
 @if (this.Model != null)
 {
-    <h3>Results:</h3>
+    <h3>Results</h3>
     foreach (var seq in Model.Sequences)
     {
         var output = string.Join(", ", seq.ToArray());
