--- a/WorldNomads/Views/Home/EnumerateSequences.cshtml
+++ b/WorldNomads/Views/Home/EnumerateSequences.cshtml
@@ -3,7 +3,7 @@
 @model WorldNomads.Web.Models.SequencesModel
 
 <h2>Enter a number</h2>
-<h6>( Must be a positve integer. Large numbers might take time, so please be patient )</h6>
+<h6>( Must be a positve whole number. Large numbers might take time, so please be patient )</h6>
 
 @using (var form = Html.BeginForm())
 {
