--- a/WorldNomads/Views/Home/EnumerateSequences.cshtml
+++ b/WorldNomads/Views/Home/EnumerateSequences.cshtml
@@ -7,7 +7,7 @@
 
 @using (var form = Html.BeginForm())
 {
-    <input type="number" id="number" name="number" />
+    <input type="number" id="number" name="number" required/>
     <button type="submit">Enumerate</button>
 }
 
